--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>Redirecting to https://webmail.migadu.com/</title>
-<meta http-equiv="refresh" content="0; URL=https://webmail.migadu.com/">
-<link rel="canonical" href="https://webmail.migadu.com/">
+<title>Redirecting to https://app.fastmail.com/</title>
+<meta http-equiv="refresh" content="0; URL=https://app.fastmail.com/">
+<link rel="canonical" href="https://app.fastmail.com/">
